UX: Fix github onebox on mobile (#23306)
* UX: Fix github onebox on mobile

* UX: Fix github onebox on mobile

--- a/app/assets/stylesheets/common/base/onebox.scss
+++ b/app/assets/stylesheets/common/base/onebox.scss
@@ -454,6 +454,7 @@ pre.onebox code {
   }
 
   .github-icon-container {
+    position: absolute;
     display: flex;
     align-items: center;
     margin-right: 10px;
@@ -474,6 +475,9 @@ pre.onebox code {
 
   .github-info-container {
     width: 100%;
+    h4 {
+      margin: 0 0 10px 50px;
+    }
   }
 
   .github-info {
